# CS-Capstone-Apartment-Event-Finder

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: main_apartment-event-finder.yml
public/: auth.html  bootstrap.html  favorites.html  index.html  maps-test.html  maps.html  navbar.html  signin.html
public/css/: favorites.css  global.css  maps.css  navbar.css  signin.css
public/js/: database.js  favorites.js  maps.js  signin.js
static/bs-results/: apartments-test.json  catchdesmoines-events.json  event.json  stored-event-locations.json
