[project]
name = "cs-capstone-apartment-event-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "flask>=3.1.3",
    "flask-bcrypt>=1.0.1",
    "flask-restful>=0.3.10",
    "gunicorn>=25.1.0",
    "playwright>=1.58.0",
    "pyodbc>=5.3.0",
    "requests>=2.32.5",
]
