[project]
name = "cs-capstone-apartment-event-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aniso8601==10.0.1",
    "bcrypt==5.0.0",
    "beautifulsoup4==4.14.3",
    "blinker==1.9.0",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "dotenv==0.9.9",
    "flask==3.1.3",
    "flask-bcrypt==1.0.1",
    "flask-restful==0.3.10",
    "greenlet==3.3.2",
    "gunicorn==25.1.0",
    "idna==3.11",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "packaging==26.0",
    "playwright>=1.58.0",
    "pyee==13.0.1",
    "pyodbc==5.3.0",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "requests==2.32.5",
    "six==1.17.0",
    "soupsieve==2.8.3",
    "typing-extensions==4.15.0",
    "urllib3==2.6.3",
    "usaddress-scourgify>=0.6.0",
    "werkzeug==3.1.6",
]
