[project]
name = "cs-capstone-apartment-event-finder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aniso8601==10.0.1",
    "azure-core==1.39.0",
    "azure-identity==1.25.3",
    "azure-storage-blob==12.28.0",
    "bcrypt==5.0.0",
    "beautifulsoup4==4.14.3",
    "blinker==1.9.0",
    "certifi==2026.2.25",
    "cffi==2.0.0 ; platform_python_implementation != 'PyPy'",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6 ; sys_platform == 'win32'",
    "cryptography==46.0.7",
    "decorator==5.2.1",
    "dotenv==0.9.9",
    "flask==3.1.3",
    "flask-bcrypt==1.0.1",
    "flask-requests>=0.0.14",
    "flask-restful==0.3.10",
    "free-proxy==1.1.3",
    "future==1.0.0",
    "geocoder==1.38.1",
    "greenlet==3.3.2",
    "gunicorn==25.1.0",
    "idna==3.11",
    "isodate==0.7.2",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "lxml==6.0.4",
    "markupsafe==3.0.3",
    "msal==1.36.0",
    "msal-extensions==1.3.1",
    "packaging==26.0",
    "playwright==1.58.0",
    "probableparsing==0.0.1",
    "pycparser==3.0 ; implementation_name != 'PyPy' and platform_python_implementation != 'PyPy'",
    "pyee==13.0.1",
    "pyjwt==2.12.1",
    "pyodbc==5.3.0",
    "python-crfsuite==0.9.12",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "ratelim==0.1.6",
    "requests==2.32.5",
    "six==1.17.0",
    "soupsieve==2.8.3",
    "typing-extensions==4.15.0",
    "urllib3==2.6.3",
    "usaddress==0.5.16",
    "usaddress-scourgify==0.6.0",
    "werkzeug==3.1.6",
    "yaml-config==0.1.5",
]
